--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -72,13 +72,13 @@
     <div id="modal_post" class="modal_container">
         <div class="modal_content">
             <div onclick="toggleModal()" class="header_modal"><i class="fa-solid fa-x"></i></div>
-            <form onsubmit="return publicar()" class="form_post">
+            <div class="form_post">
                 <label>Assunto:</label>
                 <input id="input_assunto" type="text" name="assunto">
                 <label>Descricao:</label>
                 <textarea id="input_descricao" type="" name="descricao" rows="10" cols="50"> </textarea>
-                <button class="btn_insert_post">PUBLICAR</button>
-            </form>
+                <button onclick="publicar()" class="btn_insert_post">PUBLICAR</button>
+            </div>
         </div>
     </div>
 
