--- a/public/forum/dashboard.html
+++ b/public/forum/dashboard.html
@@ -49,7 +49,7 @@
     <main>
         <div class="container">
             <div class="dashboard_container">
-                <h2 onclick="navegation('profile.html')">Voltar</h2>
+                <h2 class="btn_voltar" onclick="navegation('profile.html')"> <i class="fa-solid fa-chevron-up"></i>Voltar</h2>
                 <div class="dashboard_kpi">
                     <div class="kpi">
                         <h1>10</h1>
