--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/headerForum.css">
     <link rel="stylesheet" href="../css/homeForum.css">
+    <link rel="stylesheet" href="../css/modal.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="../js/sessao.js"></script>
 
