--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -172,7 +172,7 @@
             if (resposta.ok) {
                 if (resposta.status == 204) {
                     var feed = document.getElementById("feed");
-                    feed.innerHTML = `<h2>Nenhum resultado encontrado.</h2>`
+                    feed.innerHTML = `<h3 style="text-align: center">Seja o primeiro a publicar!</h3>`
                     throw "Nenhum resultado encontrado!!";
                 }
 
